--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ __pycache__/
 
 # Build files
 frontend/build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
