--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.12.0",
     "react-scripts": "^5.0.0"
   },
   "browserslist": {
